--- a/publications.html
+++ b/publications.html
@@ -7,6 +7,17 @@ title: Publications
   <h1>Publications</h1>
   <ul>
     <li>
+    <a href="#">On The Composability of the Riak DT Map:<br />
+      Expanding From Embedded To Multi-Key Structures</a>
+      <span class="author">Christopher S. Meiklejohn</span>
+      <span class="date">PaPEC '14, co-hosted event at EuroSys '14</span>
+    </li>
+    <li>
+      <a href="#">Riak DT Map: A Composable, Convergent Replicated Dictionary</a>
+      <span class="author">Russell Brown, Sean Cribbs, Sam Elliott, and Christopher S. Meiklejohn</span>
+      <span class="date">PaPEC '14, co-hosted event at EuroSys '14</span>
+    </li>
+    <li>
       <a href="http://dl.acm.org/citation.cfm?id=2505305.2505309&coll=DL&dl=GUIDE&CFID=429023090&CFTOKEN=63815596">Riak PG: distributed process groups on dynamo-style distributed storage</a>
       <span class="author">Christopher S. Meiklejohn</span>
       <span class="date">Erlang Workshop '13, co-hosted event at ICFP '13</span>
