Update PaPEC '14 links.

--- a/publications.html
+++ b/publications.html
@@ -7,13 +7,12 @@ title: Publications
   <h1>Publications</h1>
   <ul>
     <li>
-    <a href="#">On The Composability of the Riak DT Map:<br />
-      Expanding From Embedded To Multi-Key Structures</a>
+    <a href="http://dl.acm.org/citation.cfm?doid=2596631.2596635">On The Composability of the Riak DT Map:<br />Expanding From Embedded To Multi-Key Structures</a>
       <span class="author">Christopher S. Meiklejohn</span>
       <span class="date">PaPEC '14, co-hosted event at EuroSys '14</span>
     </li>
     <li>
-      <a href="#">Riak DT Map: A Composable, Convergent Replicated Dictionary</a>
+      <a href="http://dl.acm.org/citation.cfm?doid=2596631.2596633">Riak DT Map: A Composable, Convergent Replicated Dictionary</a>
       <span class="author">Russell Brown, Sean Cribbs, Sam Elliott, and Christopher S. Meiklejohn</span>
       <span class="date">PaPEC '14, co-hosted event at EuroSys '14</span>
     </li>
