Add vector clocks paper.

--- a/publications.html
+++ b/publications.html
@@ -7,6 +7,11 @@ title: Publications
   <h1>Publications</h1>
   <ul>
     <li>
+    <a href="http://arxiv.org/abs/1406.4291">Vector Clocks in Coq: An Experience Report</a>
+      <span class="author">Christopher S. Meiklejohn</span>
+      <span class="date">Draft, published 17 Jun 2014</span>
+    </li>
+    <li>
     <a href="http://dl.acm.org/citation.cfm?doid=2596631.2596635">On The Composability of the Riak DT Map:<br />Expanding From Embedded To Multi-Key Structures</a>
       <span class="author">Christopher S. Meiklejohn</span>
       <span class="date">PaPEC '14, co-hosted event at EuroSys '14</span>
