--- a/publications.html
+++ b/publications.html
@@ -7,6 +7,12 @@ title: Publications
   <h1>Publications</h1>
   <ul>
     <li>
+      <a
+        href="http://dl.acm.org/citation.cfm?id=2633451">Derflow:<br />distributed deterministic dataflow programming for erlang</a>
+      <span class="author">Manuel Bravo, Zhongmiao Li, Peter Van Roy, Christopher S. Meiklejohn</span>
+      <span class="date">Erlang Workshop '14, co-hosted event at ICFP '14</span>
+    </li>
+    <li>
     <a href="http://arxiv.org/abs/1406.4291">Vector Clocks in Coq: An Experience Report</a>
       <span class="author">Christopher S. Meiklejohn</span>
       <span class="date">Draft, published 17 Jun 2014</span>
