Update with LADIS workshop.
Update publications list with soon to be published information on the
LADIS workshop.

--- a/publications.html
+++ b/publications.html
@@ -7,8 +7,12 @@ title: Publications
   <h1>Publications</h1>
   <ul>
     <li>
-      <a
-        href="http://dl.acm.org/citation.cfm?id=2633451">Derflow:<br />distributed deterministic dataflow programming for erlang</a>
+      <a href="#">Eventual Consistency and Deterministic Dataflow Programming:<br />A Case Study of Integrating Derflow with the Riak Data Store</a>
+      <span class="author">Christopher S. Meiklejohn</span>
+      <span class="date">to be published at LADIS Workshop '14</span>
+    </li>
+    <li>
+      <a href="http://dl.acm.org/citation.cfm?id=2633451">Derflow:<br />distributed deterministic dataflow programming for erlang</a>
       <span class="author">Manuel Bravo, Zhongmiao Li, Peter Van Roy, Christopher S. Meiklejohn</span>
       <span class="date">Erlang Workshop '14, co-hosted event at ICFP '14</span>
     </li>
@@ -28,8 +32,7 @@ title: Publications
       <span class="date">PaPEC '14, co-hosted event at EuroSys '14</span>
     </li>
     <li>
-      <a
-        href="http://dl.acm.org/citation.cfm?id=2505305.2505309&coll=DL&dl=GUIDE&CFID=429023090&CFTOKEN=63815596">Riak PG:<br />distributed process groups on dynamo-style distributed storage</a>
+      <a href="http://dl.acm.org/citation.cfm?id=2505305.2505309&coll=DL&dl=GUIDE&CFID=429023090&CFTOKEN=63815596">Riak PG:<br />distributed process groups on dynamo-style distributed storage</a>
       <span class="author">Christopher S. Meiklejohn</span>
       <span class="date">Erlang Workshop '13, co-hosted event at ICFP '13</span>
     </li>
