--- a/publications.html
+++ b/publications.html
@@ -7,6 +7,11 @@ title: Publications
   <h1>Publications</h1>
   <ul>
     <li>
+      <a href="#">Augmented Inverted Indexes to Track Causality in Eventually Consistent Data Stores</a>
+      <span class="author">Christopher S. Meiklejohn</span>
+      <span class="date">to be published at Middleware '14</span>
+    </li>
+    <li>
       <a href="#">Eventual Consistency and Deterministic Dataflow Programming:<br />A Case Study of Integrating Derflow with the Riak Data Store</a>
       <span class="author">Christopher S. Meiklejohn</span>
       <span class="date">to be published at LADIS Workshop '14</span>
