--- a/talks.html
+++ b/talks.html
@@ -16,5 +16,10 @@ title: Talks
       <span class="author">Christopher S. Meiklejohn</span>
       <span class="date">RICON 2014; Las Vegas, NV</span>
     </li>
+    <li>
+      <a href="https://www.youtube.com/watch?v=qyVNG7fnubQ">Convergent / Divergent</a>
+      <span class="author">Christopher S. Meiklejohn</span>
+      <span class="date">EmberConf 2014; Portland, OR</span>
+    </li>
   </ul>
 </div>
