--- a/talks.html
+++ b/talks.html
@@ -13,7 +13,7 @@ title: Talks
     </li>
     <li>
       <a href="https://www.youtube.com/watch?v=1KP_pxFhlVU">SyncFree: Large-Scale Computation Without Synchronization</a>
-      <span class="author">Christopher S. Meiklejohn</span>
+      <span class="author">Annette Bieniusa and Christopher S. Meiklejohn</span>
       <span class="date">RICON 2014; Las Vegas, NV</span>
     </li>
     <li>
