--- a/talks.html
+++ b/talks.html
@@ -21,5 +21,10 @@ title: Talks
       <span class="author">Christopher S. Meiklejohn</span>
       <span class="date">EmberConf 2014; Portland, OR</span>
     </li>
+    <li>
+      <a href="https://www.youtube.com/watch?v=vk0-48qacqw">Distributed Deterministic Dataflow Programming</a>
+      <span class="author">Christopher S. Meiklejohn</span>
+      <span class="date">ACM SIGPLAN Erlang Workshop '14; Gothenburg, Sweden</span>
+    </li>
   </ul>
 </div>
