--- a/talks.html
+++ b/talks.html
@@ -26,5 +26,10 @@ title: Talks
       <span class="author">Christopher S. Meiklejohn</span>
       <span class="date">ACM SIGPLAN Erlang Workshop '14; Gothenburg, Sweden</span>
     </li>
+    <li>
+      <a href="https://www.youtube.com/watch?v=z79mjsLdkpY">"A Note On Distributed Computing"</a>
+      <span class="author">Christopher S. Meiklejohn</span>
+      <span class="date">Papers We Love 2014; Boston, MA</span>
+    </li>
   </ul>
 </div>
