--- a/talks.html
+++ b/talks.html
@@ -31,5 +31,10 @@ title: Talks
       <span class="author">Christopher S. Meiklejohn</span>
       <span class="date">Papers We Love 2014; Boston, MA</span>
     </li>
+    <li>
+      <a href="https://www.youtube.com/watch?v=IINmkv4izVQ">Verified Vector Clocks: An Unexpected Journey</a>
+      <span class="author">Christopher S. Meiklejohn</span>
+      <span class="date">Erlang Factory 2014, San Francisco; San Francisco, CA</span>
+    </li>
   </ul>
 </div>
