--- a/talks.html
+++ b/talks.html
@@ -36,5 +36,10 @@ title: Talks
       <span class="author">Christopher S. Meiklejohn</span>
       <span class="date">Erlang Factory 2014, San Francisco; San Francisco, CA</span>
     </li>
+    <li>
+      <a href="https://www.youtube.com/watch?v=ZOCCzDNsAtI">An Introduction to Functional Reactive Programming</a>
+      <span class="author">Christopher S. Meiklejohn</span>
+      <span class="date">NodePDX 2013; Portland, OR</span>
+    </li>
   </ul>
 </div>
