--- a/talks.html
+++ b/talks.html
@@ -24,12 +24,27 @@ title: Talks
     <li>
       <a href="https://www.youtube.com/watch?v=vk0-48qacqw">Distributed Deterministic Dataflow Programming</a>
       <span class="author">Christopher S. Meiklejohn</span>
-      <span class="date">ACM SIGPLAN Erlang Workshop '14; Gothenburg, Sweden</span>
+      <span class="date">ACM SIGPLAN Erlang Workshop 2014; Gothenburg, Sweden</span>
+    </li>
+    <li>
+      <a href="https://www.youtube.com/watch?v=a0tNH3rBi94">Choose Your Own Consistency</a>
+      <span class="author">Christopher S. Meiklejohn</span>
+      <span class="date">London Erlang User Group 2014; London, UK</span>
     </li>
     <li>
       <a href="https://www.youtube.com/watch?v=z79mjsLdkpY">"A Note On Distributed Computing"</a>
       <span class="author">Christopher S. Meiklejohn</span>
       <span class="date">Papers We Love 2014; Boston, MA</span>
+    </li>
+    <li>
+      <a href="https://www.youtube.com/watch?v=66bU45vVF00">Bloom: A Language For Disorderly Distributed Computing</a>
+      <span class="author">Christopher S. Meiklejohn</span>
+      <span class="date">Wicked Good Ruby 2013; Boston, MA</span>
+    </li>
+    <li>
+      <a href="https://www.youtube.com/watch?v=N_qJTgcvUxI">From Ruby to Erlang: An Unexpected Journey</a>
+      <span class="author">Christopher S. Meiklejohn</span>
+      <span class="date">Chicago Erlang Factory Lite 2013; Chicago, IL</span>
     </li>
     <li>
       <a href="https://www.youtube.com/watch?v=IINmkv4izVQ">Verified Vector Clocks: An Unexpected Journey</a>
