Add link to index paper.

--- a/publications.html
+++ b/publications.html
@@ -7,7 +7,7 @@ title: Publications
   <h1>Publications</h1>
   <ul>
     <li>
-      <a href="#">Augmented Inverted Indexes to Track Causality in Eventually Consistent Data Stores</a>
+      <a href="http://dl.acm.org/citation.cfm?id=2678512">Augmented Inverted Indexes to Track Causality in Eventually Consistent Data Stores</a>
       <span class="author">Christopher S. Meiklejohn</span>
       <span class="date">to be published at Middleware '14</span>
     </li>
