--- a/index.html
+++ b/index.html
@@ -4,10 +4,39 @@ title: Christopher Meiklejohn
 ---
 
 <div id="home">
-  <h1>Blog Posts</h1>
+  <h1>SyncFree</h1>
   <ul class="posts">
     {% for post in site.posts %}
+      {% if post.group == "SyncFree" %}
       <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
+      {% endif %}
+    {% endfor %}
+  </ul>
+
+  <h1>Reading Lists</h1>
+  <ul class="posts">
+    {% for post in site.posts %}
+      {% if post.group == "readings" %}
+      <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
+      {% endif %}
+    {% endfor %}
+  </ul>
+
+  <h1>Verified Vector Clocks</h1>
+  <ul class="posts">
+    {% for post in site.posts %}
+      {% if post.group == "vvclocks" %}
+      <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
+      {% endif %}
+    {% endfor %}
+  </ul>
+
+  <h1>Other</h1>
+  <ul class="posts">
+    {% for post in site.posts %}
+      {% if post.group == nil %}
+      <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
+      {% endif %}
     {% endfor %}
   </ul>
 </div>
