--- a/publications.html
+++ b/publications.html
@@ -9,12 +9,12 @@ title: Publications
     <li>
       <a href="http://dl.acm.org/citation.cfm?id=2678512">Augmented Inverted Indexes to Track Causality in Eventually Consistent Data Stores</a>
       <span class="author">Christopher S. Meiklejohn</span>
-      <span class="date">to be published at Middleware '14</span>
+      <span class="date">Middleware '14, Demos &amp; Poster Session</span>
     </li>
     <li>
-      <a href="#">Eventual Consistency and Deterministic Dataflow Programming:<br />A Case Study of Integrating Derflow with the Riak Data Store</a>
+      <a href="/publications/derflowl-ladis.pdf">Eventual Consistency and Deterministic Dataflow Programming:<br />A Case Study of Integrating Derflow with the Riak Data Store</a>
       <span class="author">Christopher S. Meiklejohn</span>
-      <span class="date">to be published at LADIS Workshop '14</span>
+      <span class="date">LADIS Workshop '14</span>
     </li>
     <li>
       <a href="http://dl.acm.org/citation.cfm?id=2633451">Derflow:<br />distributed deterministic dataflow programming for erlang</a>
