--- a/videos.html
+++ b/videos.html
@@ -1,10 +1,10 @@
 ---
 layout: default
-title: Talks
+title: Videos
 ---
 
 <div id="post">
-  <h1>Talks</h1>
+  <h1>Videos</h1>
   <ul>
     <li>
       <a href="https://www.youtube.com/watch?v=8_z9-iRiSZw">Eventually Consistent Computation with CRDTs</a>
