--- a/publications.html
+++ b/publications.html
@@ -5,6 +5,7 @@ title: Publications
 
 <div id="post">
   <h1>Publications</h1>
+  <p>A list of publications I've been involved with:</p>
   <ul>
     <li>
       <a href="http://dl.acm.org/citation.cfm?id=2678512">Augmented Inverted Indexes to Track Causality in Eventually Consistent Data Stores</a>
@@ -12,12 +13,12 @@ title: Publications
       <span class="date">Middleware '14, Demos &amp; Poster Session</span>
     </li>
     <li>
-      <a href="/publications/derflowl-ladis.pdf">Eventual Consistency and Deterministic Dataflow Programming:<br />A Case Study of Integrating Derflow with the Riak Data Store</a>
+      <a href="/publications/derflowl-ladis.pdf">Eventual Consistency and Deterministic Dataflow Programming: A Case Study of Integrating Derflow with the Riak Data Store</a>
       <span class="author">Christopher S. Meiklejohn</span>
       <span class="date">LADIS Workshop '14</span>
     </li>
     <li>
-      <a href="http://dl.acm.org/citation.cfm?id=2633451">Derflow:<br />distributed deterministic dataflow programming for erlang</a>
+      <a href="http://dl.acm.org/citation.cfm?id=2633451">Derflow: distributed deterministic dataflow programming for erlang</a>
       <span class="author">Manuel Bravo, Zhongmiao Li, Peter Van Roy, Christopher S. Meiklejohn</span>
       <span class="date">Erlang Workshop '14, co-hosted event at ICFP '14</span>
     </li>
@@ -27,17 +28,17 @@ title: Publications
       <span class="date">Draft, published 17 Jun 2014</span>
     </li>
     <li>
-    <a href="http://dl.acm.org/citation.cfm?doid=2596631.2596635">On The Composability of the Riak DT Map:<br />Expanding From Embedded To Multi-Key Structures</a>
+    <a href="http://dl.acm.org/citation.cfm?doid=2596631.2596635">On The Composability of the Riak DT Map: Expanding From Embedded To Multi-Key Structures</a>
       <span class="author">Christopher S. Meiklejohn</span>
       <span class="date">PaPEC '14, co-hosted event at EuroSys '14</span>
     </li>
     <li>
-      <a href="http://dl.acm.org/citation.cfm?doid=2596631.2596633">Riak DT Map:<br />A Composable, Convergent Replicated Dictionary</a>
+      <a href="http://dl.acm.org/citation.cfm?doid=2596631.2596633">Riak DT Map: A Composable, Convergent Replicated Dictionary</a>
       <span class="author">Russell Brown, Sean Cribbs, Sam Elliott, and Christopher S. Meiklejohn</span>
       <span class="date">PaPEC '14, co-hosted event at EuroSys '14</span>
     </li>
     <li>
-      <a href="http://dl.acm.org/citation.cfm?id=2505305.2505309&coll=DL&dl=GUIDE&CFID=429023090&CFTOKEN=63815596">Riak PG:<br />distributed process groups on dynamo-style distributed storage</a>
+      <a href="http://dl.acm.org/citation.cfm?id=2505305.2505309&coll=DL&dl=GUIDE&CFID=429023090&CFTOKEN=63815596">Riak PG: distributed process groups on dynamo-style distributed storage</a>
       <span class="author">Christopher S. Meiklejohn</span>
       <span class="date">Erlang Workshop '13, co-hosted event at ICFP '13</span>
     </li>
