--- a/publications.html
+++ b/publications.html
@@ -8,39 +8,47 @@ title: Publications
   <p>A list of publications I've been involved with:</p>
   <ul>
     <li>
-      <a href="http://dl.acm.org/citation.cfm?id=2678512">Augmented Inverted Indexes to Track Causality in Eventually Consistent Data Stores</a>
+      Augmented Inverted Indexes to Track Causality in Eventually Consistent Data Stores
       <span class="author">Christopher S. Meiklejohn</span>
       <span class="date">Middleware '14, Demos &amp; Poster Session</span>
+      <span><a href="http://dl.acm.org/citation.cfm?id=2678512">[ACM]</a></span>
     </li>
     <li>
-      <a href="/publications/derflowl-ladis.pdf">Eventual Consistency and Deterministic Dataflow Programming: A Case Study of Integrating Derflow with the Riak Data Store</a>
+      Eventual Consistency and Deterministic Dataflow Programming: A Case Study of Integrating Derflow with the Riak Data Store
       <span class="author">Christopher S. Meiklejohn</span>
       <span class="date">LADIS Workshop '14</span>
+      <span><a href="/publications/derflowl-ladis.pdf">[preprint]</a> <a
+          href="https://speakerdeck.com/cmeiklejohn/eventual-consistency-and-deterministic-dataflow-programming">[slides]</a></span>
     </li>
     <li>
-      <a href="http://dl.acm.org/citation.cfm?id=2633451">Derflow: distributed deterministic dataflow programming for erlang</a>
+      Derflow: distributed deterministic dataflow programming for erlang
       <span class="author">Manuel Bravo, Zhongmiao Li, Peter Van Roy, Christopher S. Meiklejohn</span>
-      <span class="date">Erlang Workshop '14, co-hosted event at ICFP '14</span>
+      <span class="date">ACM SIGPLAN Erlang Workshop '14, co-hosted event at ICFP '14</span>
+      <span><a href="http://dl.acm.org/citation.cfm?id=2633451">[ACM]</a> <a href="https://speakerdeck.com/cmeiklejohn/derflow-distributed-deterministic-dataflow-programming-for-erlang">[slides]</a></span>
     </li>
     <li>
-    <a href="http://arxiv.org/abs/1406.4291">Vector Clocks in Coq: An Experience Report</a>
+      Vector Clocks in Coq: An Experience Report
       <span class="author">Christopher S. Meiklejohn</span>
       <span class="date">Draft, published 17 Jun 2014</span>
+      <span><a href="http://arxiv.org/abs/1406.4291">[arXiV preprint]</a></span>
     </li>
     <li>
-    <a href="http://dl.acm.org/citation.cfm?doid=2596631.2596635">On The Composability of the Riak DT Map: Expanding From Embedded To Multi-Key Structures</a>
+    On The Composability of the Riak DT Map: Expanding From Embedded To Multi-Key Structures
       <span class="author">Christopher S. Meiklejohn</span>
       <span class="date">PaPEC '14, co-hosted event at EuroSys '14</span>
+      <span><a href="http://dl.acm.org/citation.cfm?doid=2596631.2596635">[ACM]</a> <a href="https://speakerdeck.com/cmeiklejohn/on-the-composability-of-the-riak-dt-map-expanding-from-embedded-to-multi-key-structures">[slides]</a></span>
     </li>
     <li>
-      <a href="http://dl.acm.org/citation.cfm?doid=2596631.2596633">Riak DT Map: A Composable, Convergent Replicated Dictionary</a>
+      Riak DT Map: A Composable, Convergent Replicated Dictionary
       <span class="author">Russell Brown, Sean Cribbs, Sam Elliott, and Christopher S. Meiklejohn</span>
       <span class="date">PaPEC '14, co-hosted event at EuroSys '14</span>
+      <span><a href="http://dl.acm.org/citation.cfm?doid=2596631.2596633">[ACM]</a></span>
     </li>
     <li>
-      <a href="http://dl.acm.org/citation.cfm?id=2505305.2505309&coll=DL&dl=GUIDE&CFID=429023090&CFTOKEN=63815596">Riak PG: distributed process groups on dynamo-style distributed storage</a>
+      Riak PG: distributed process groups on dynamo-style distributed storage
       <span class="author">Christopher S. Meiklejohn</span>
-      <span class="date">Erlang Workshop '13, co-hosted event at ICFP '13</span>
+      <span class="date">ACM SIGPLAN Erlang Workshop '13, co-hosted event at ICFP '13</span>
+      <span><a href="http://dl.acm.org/citation.cfm?id=2505305.2505309">[ACM]</a> <a href="https://speakerdeck.com/cmeiklejohn/riak-pg-distributed-process-groups-on-dynamo-style-distributed-storage">[slides]</a></span>
     </li>
   </ul>
 </div>
