--- a/videos.html
+++ b/videos.html
@@ -5,6 +5,19 @@ title: Videos
 
 <div id="post">
   <h1>Videos</h1>
+  <p>A list of videos from previous speaking engagements.</p>
+  <h2>Academic Conferences</h2>
+  <p></p>
+  <ul>
+    <li>
+      <a href="https://www.youtube.com/watch?v=vk0-48qacqw">Distributed Deterministic Dataflow Programming</a>
+      <span class="author">Christopher S. Meiklejohn</span>
+      <span class="date">ACM SIGPLAN Erlang Workshop 2014; Gothenburg, Sweden</span>
+    </li>
+  </ul>
+
+  <h2>Industry Conferences</h2>
+  <p></p>
   <ul>
     <li>
       <a href="https://www.youtube.com/watch?v=8_z9-iRiSZw">Eventually Consistent Computation with CRDTs</a>
@@ -17,16 +30,6 @@ title: Videos
       <span class="date">RICON 2014; Las Vegas, NV</span>
     </li>
     <li>
-      <a href="https://www.youtube.com/watch?v=z79mjsLdkpY">"A Note On Distributed Computing"</a>
-      <span class="author">Christopher S. Meiklejohn</span>
-      <span class="date">Papers We Love 2014; Boston, MA</span>
-    </li>
-    <li>
-      <a href="https://www.youtube.com/watch?v=vk0-48qacqw">Distributed Deterministic Dataflow Programming</a>
-      <span class="author">Christopher S. Meiklejohn</span>
-      <span class="date">ACM SIGPLAN Erlang Workshop 2014; Gothenburg, Sweden</span>
-    </li>
-    <li>
       <a href="https://www.youtube.com/watch?v=qyVNG7fnubQ">Convergent / Divergent</a>
       <span class="author">Christopher S. Meiklejohn</span>
       <span class="date">EmberConf 2014; Portland, OR</span>
@@ -35,11 +38,6 @@ title: Videos
       <a href="https://www.youtube.com/watch?v=IINmkv4izVQ">Verified Vector Clocks: An Unexpected Journey</a>
       <span class="author">Christopher S. Meiklejohn</span>
       <span class="date">Erlang Factory 2014, San Francisco; San Francisco, CA</span>
-    </li>
-    <li>
-      <a href="https://www.youtube.com/watch?v=a0tNH3rBi94">Choose Your Own Consistency</a>
-      <span class="author">Christopher S. Meiklejohn</span>
-      <span class="date">London Erlang User Group 2014; London, UK</span>
     </li>
     <li>
       <a href="https://www.youtube.com/watch?v=66bU45vVF00">Bloom: A Language For Disorderly Distributed Computing</a>
@@ -55,6 +53,21 @@ title: Videos
       <a href="https://www.youtube.com/watch?v=ZOCCzDNsAtI">An Introduction to Functional Reactive Programming</a>
       <span class="author">Christopher S. Meiklejohn</span>
       <span class="date">NodePDX 2013; Portland, OR</span>
+    </li>
+  </ul>
+
+  <h2>User Groups</h2>
+  <p></p>
+  <ul>
+    <li>
+      <a href="https://www.youtube.com/watch?v=z79mjsLdkpY">"A Note On Distributed Computing"</a>
+      <span class="author">Christopher S. Meiklejohn</span>
+      <span class="date">Papers We Love 2014; Boston, MA</span>
+    </li>
+    <li>
+      <a href="https://www.youtube.com/watch?v=a0tNH3rBi94">Choose Your Own Consistency</a>
+      <span class="author">Christopher S. Meiklejohn</span>
+      <span class="date">London Erlang User Group 2014; London, UK</span>
     </li>
   </ul>
 </div>
