--- a/publications.html
+++ b/publications.html
@@ -8,6 +8,11 @@ title: Publications
   <p>A list of publications I've been involved with:</p>
   <ul>
     <li>
+      Lasp: A Language for Distributed, Eventually Consistent Computations with CRDTs
+      <span class="author">Christopher S. Meiklejohn, Peter Van Roy</span>
+      <span class="date">PaPoC '15, co-hosted event at EuroSys '15</span>
+    </li>
+    <li>
       Augmented Inverted Indexes to Track Causality in Eventually Consistent Data Stores
       <span class="author">Christopher S. Meiklejohn</span>
       <span class="date">Middleware '14, Demos &amp; Poster Session</span>
