--- a/publications.html
+++ b/publications.html
@@ -11,6 +11,7 @@ title: Publications
       Lasp: A Language for Distributed, Eventually Consistent Computations with CRDTs
       <span class="author">Christopher S. Meiklejohn, Peter Van Roy</span>
       <span class="date">PaPoC '15, co-hosted event at EuroSys '15</span>
+      <span><a href="http://dl.acm.org/citation.cfm?id=2745954">[ACM]</a></span>
     </li>
     <li>
       Augmented Inverted Indexes to Track Causality in Eventually Consistent Data Stores
