--- a/videos.html
+++ b/videos.html
@@ -5,7 +5,7 @@ title: Videos
 
 <div id="post">
   <h1>Videos</h1>
-  <p>A list of videos from previous speaking engagements.</p>
+  <p>Selected videos from previous speaking engagements:</p>
   <h2>Academic Conferences</h2>
   <p></p>
   <ul>
@@ -20,7 +20,12 @@ title: Videos
   <p></p>
   <ul>
     <li>
-      <a href="https://www.youtube.com/watch?v=8_z9-iRiSZw">Eventually Consistent Computation with CRDTs</a>
+      <a href="https://www.youtube.com/watch?v=uwpakTIg9r8">Distributed, Eventually Consistent Computations</a>
+      <span class="author">Christopher S. Meiklejohn</span>
+      <span class="date">Erlang Factory 2015, San Francisco; San Francisco, CA</span>
+    </li>
+    <li>
+      <a href="https://www.youtube.com/watch?v=8_z9-iRiSZw">Eventually Consistent Computations with CRDTs</a>
       <span class="author">Christopher S. Meiklejohn</span>
       <span class="date">RICON 2014; Las Vegas, NV</span>
     </li>
