--- a/publications.html
+++ b/publications.html
@@ -5,19 +5,16 @@ title: Publications
 
 <div id="post">
   <h1>Publications</h1>
-  <p>A list of publications I've been involved with:</p>
+  <p>Publications I've been involved with:</p>
+
+  <h2>Workshops</h2>
+  <p></p>
   <ul>
     <li>
       Lasp: A Language for Distributed, Eventually Consistent Computations with CRDTs
       <span class="author">Christopher S. Meiklejohn, Peter Van Roy</span>
-      <span class="date">PaPoC '15, co-hosted event at EuroSys '15</span>
+      <span class="date">PaPoC '15, co-hosted event at ACM EuroSys '15</span>
       <span><a href="http://dl.acm.org/citation.cfm?id=2745954">[ACM]</a></span>
-    </li>
-    <li>
-      Augmented Inverted Indexes to Track Causality in Eventually Consistent Data Stores
-      <span class="author">Christopher S. Meiklejohn</span>
-      <span class="date">Middleware '14, Demos &amp; Poster Session</span>
-      <span><a href="http://dl.acm.org/citation.cfm?id=2678512">[ACM]</a></span>
     </li>
     <li>
       Eventual Consistency and Deterministic Dataflow Programming: A Case Study of Integrating Derflow with the Riak Data Store
@@ -33,21 +30,15 @@ title: Publications
       <span><a href="http://dl.acm.org/citation.cfm?id=2633451">[ACM]</a> <a href="https://speakerdeck.com/cmeiklejohn/derflow-distributed-deterministic-dataflow-programming-for-erlang">[slides]</a></span>
     </li>
     <li>
-      Vector Clocks in Coq: An Experience Report
-      <span class="author">Christopher S. Meiklejohn</span>
-      <span class="date">Draft, published 17 Jun 2014</span>
-      <span><a href="http://arxiv.org/abs/1406.4291">[arXiV preprint]</a></span>
-    </li>
-    <li>
     On The Composability of the Riak DT Map: Expanding From Embedded To Multi-Key Structures
       <span class="author">Christopher S. Meiklejohn</span>
-      <span class="date">PaPEC '14, co-hosted event at EuroSys '14</span>
+      <span class="date">PaPEC '14, co-hosted event at ACM EuroSys '14</span>
       <span><a href="http://dl.acm.org/citation.cfm?doid=2596631.2596635">[ACM]</a> <a href="https://speakerdeck.com/cmeiklejohn/on-the-composability-of-the-riak-dt-map-expanding-from-embedded-to-multi-key-structures">[slides]</a></span>
     </li>
     <li>
       Riak DT Map: A Composable, Convergent Replicated Dictionary
       <span class="author">Russell Brown, Sean Cribbs, Sam Elliott, and Christopher S. Meiklejohn</span>
-      <span class="date">PaPEC '14, co-hosted event at EuroSys '14</span>
+      <span class="date">PaPEC '14, co-hosted event at ACM EuroSys '14</span>
       <span><a href="http://dl.acm.org/citation.cfm?doid=2596631.2596633">[ACM]</a></span>
     </li>
     <li>
@@ -55,6 +46,28 @@ title: Publications
       <span class="author">Christopher S. Meiklejohn</span>
       <span class="date">ACM SIGPLAN Erlang Workshop '13, co-hosted event at ICFP '13</span>
       <span><a href="http://dl.acm.org/citation.cfm?id=2505305.2505309">[ACM]</a> <a href="https://speakerdeck.com/cmeiklejohn/riak-pg-distributed-process-groups-on-dynamo-style-distributed-storage">[slides]</a></span>
+    </li>
+  </ul>
+
+  <h2>Posters</h2>
+  <p></p>
+  <ul>
+    <li>
+      Augmented Inverted Indexes to Track Causality in Eventually Consistent Data Stores
+      <span class="author">Christopher S. Meiklejohn</span>
+      <span class="date">Middleware '14, Demos &amp; Poster Session</span>
+      <span><a href="http://dl.acm.org/citation.cfm?id=2678512">[ACM]</a></span>
+    </li>
+  </ul>
+
+  <h2>Drafts</h2>
+  <p></p>
+  <ul>
+    <li>
+      Vector Clocks in Coq: An Experience Report
+      <span class="author">Christopher S. Meiklejohn</span>
+      <span class="date">Draft, published 17 Jun 2014</span>
+      <span><a href="http://arxiv.org/abs/1406.4291">[arXiV preprint]</a></span>
     </li>
   </ul>
 </div>
